--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'wiki/**'
+      - 'README.md'
 
 jobs:
   sync:
@@ -17,13 +18,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: "${{ github.repository }}.wiki"
-          path: "wiki-sync.wiki"
+          path: "lichess-bot.wiki"
       - name: Sync files to wiki
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "Wiki sync"
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
-          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
+          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/lichess-bot.wiki
           cd $GITHUB_WORKSPACE/lichess-bot.wiki
           git add .
           git commit -m "Update wiki"
