--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -23,9 +23,10 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "Wiki sync"
+          git remote set-url origin ${{ secrets.ssh2 }}
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
           cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
           cd $GITHUB_WORKSPACE/wiki-sync.wiki
           git add .
           git commit -m "Update wiki"
-          git push
+          git push origin
