--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -21,8 +21,8 @@ jobs:
           path: "wiki-sync.wiki"
       - name: Sync files to wiki
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "Wiki sync"
+          git config --global user.email "40605232+AttackingOrDefending@users.noreply.github.com"
+          git config --global user.name "AttackingOrDefending"
           git remote set-url origin ${{ secrets.ssh2 }}
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
           cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
