--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -23,14 +23,9 @@ jobs:
         run: |
           git config --global user.email "40605232+AttackingOrDefending@users.noreply.github.com"
           git config --global user.name "AttackingOrDefending"
-          git remote set-url origin ${{ secrets.ssh }}
-          cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
-          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
-          git add .
-          git commit -m "Update wiki"
-          git push origin
-          cd $GITHUB_WORKSPACE/wiki-sync.wiki
           git remote set-url origin ${{ secrets.ssh2 }}
+          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
+          cd $GITHUB_WORKSPACE/wiki-sync.wiki
           git add .
-          git commit -m "Update wiki"
+          git commit -m "Update wiki 2"
           git push origin
