--- a/.github/workflows/wiki1.yml
+++ b/.github/workflows/wiki1.yml
@@ -19,6 +19,6 @@ jobs:
           git config --global user.name "AttackingOrDefending"
           git remote set-url origin ${{ secrets.ssh }}
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
-          git add .
+          git add wiki/Home.md
           git commit -m "Update wiki 1"
-          git push origin
+          git push origin HEAD:main
