--- a/.github/workflows/wiki1.yml
+++ b/.github/workflows/wiki1.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   sync:
+    if: "!contains(github.event.head_commit.message, 'Auto update wiki/Home.md')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -24,6 +25,9 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "Wiki sync"
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
+          git add .
+          git commit -m "Auto update wiki/Home.md"
+          git push
           cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
           cd $GITHUB_WORKSPACE/wiki-sync.wiki
           git add .
