--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -3,7 +3,7 @@ name: Sync wiki
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'wiki/**'
       - 'README.md'
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: "${{ github.repository }}.wiki"
-          path: "lichess-bot.wiki"
+          path: "wiki-sync.wiki"
       - name: Set path
         uses: dorny/paths-filter@v2
         id: changes
@@ -58,8 +58,8 @@ jobs:
           git push
       - name: Sync all files to wiki
         run: |
-          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/lichess-bot.wiki
-          cd $GITHUB_WORKSPACE/lichess-bot.wiki
+          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
+          cd $GITHUB_WORKSPACE/wiki-sync.wiki
           git add .
           git commit -m "Auto update wiki"
           git push
