--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -3,14 +3,14 @@ name: Sync wiki
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'wiki/**'
       - 'README.md'
 
 jobs:
   sync:
-    if: github.repository == github.event.repository.full_name
+    if: github.repository == 'lichess-bot-devs/lichess-bot'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: "${{ github.repository }}.wiki"
-          path: "wiki-sync.wiki"
+          path: "lichess-bot.wiki"
       - name: Set path
         uses: dorny/paths-filter@v2
         id: changes
@@ -47,19 +47,19 @@ jobs:
         run: |
           cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
           git add wiki/Home.md
-          git commit -m "Auto update wiki/Home.md"
+          git commit -m "Auto update wiki/Home.md (${{ github.event.head_commit.message }})"
           git push
       - name: Sync wiki/Home.md to README.md
         if: steps.changes.outputs.home == 'true'
         run: |
           cp -r $GITHUB_WORKSPACE/wiki/Home.md $GITHUB_WORKSPACE/README.md
           git add README.md
-          git commit -m "Auto update README.md"
+          git commit -m "Auto update README.md (${{ github.event.head_commit.message }})"
           git push
       - name: Sync all files to wiki
         run: |
-          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
-          cd $GITHUB_WORKSPACE/wiki-sync.wiki
+          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/lichess-bot.wiki
+          cd $GITHUB_WORKSPACE/lichess-bot.wiki
           git add .
-          git commit -m "Auto update wiki"
+          git commit -m "Auto update wiki (${{ github.event.head_commit.message }})"
           git push
