--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -20,46 +20,18 @@ jobs:
         with:
           repository: "${{ github.repository }}.wiki"
           path: "wiki-sync.wiki"
-      - name: Set path
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            wiki:
-              - 'wiki/**'
-            home:
-              - 'wiki/Home.md'
-            readme:
-              - 'README.md'
-      - name: Prevent Conflicts
-        if: |
-          steps.changes.outputs.home == 'true' &&
-          steps.changes.outputs.readme == 'true'
-        run: |
-            echo "Error: Conflicting changes. Edit either the README.md file or the wiki/Home.md file, not both."
-            exit 1
       - name: Set github bot global config
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "actions-user"
-      - name: Sync README.md to wiki/Home.md
-        if: steps.changes.outputs.readme == 'true'
-        run: |
-          cp -r $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/wiki/Home.md
-          git add wiki/Home.md
-          git commit -m "Auto update wiki/Home.md (${{ github.event.head_commit.message }})"
-          git push
-      - name: Sync wiki/Home.md to README.md
-        if: steps.changes.outputs.home == 'true'
-        run: |
-          cp -r $GITHUB_WORKSPACE/wiki/Home.md $GITHUB_WORKSPACE/README.md
-          git add README.md
-          git commit -m "Auto update README.md (${{ github.event.head_commit.message }})"
-          git push
       - name: Sync all files to wiki
         run: |
-          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/wiki-sync.wiki
-          cd $GITHUB_WORKSPACE/wiki-sync.wiki
+          cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/lichess-bot.wiki
+          cp -r $GITHUB_WORKSPACE/wiki/* $GITHUB_WORKSPACE/lichess-bot.wiki
+          cd $GITHUB_WORKSPACE/lichess-bot.wiki
+          git add .
+          git commit -m "Auto update wiki"
+          git push
           git add .
           git commit -m "Auto update wiki (${{ github.event.head_commit.message }})"
           git push
